--- a/package.json
+++ b/package.json
@@ -7,14 +7,24 @@
     "start": "node server.js",
     "dev": "node --watch server.js"
   },
-  "keywords": ["community", "services", "nonprofit"],
+  "keywords": [
+    "community",
+    "services",
+    "nonprofit"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2",
+    "@launchdarkly/node-server-sdk": "9.10.6",
+    "@launchdarkly/observability": "^1.0.0",
+    "@launchdarkly/session-replay": "^1.0.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "dotenv": "^17.2.4",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "launchdarkly-js-client-sdk": "^3.9.0",
     "uuid": "^9.0.0"
-  }
+  },
+  "type": "module"
 }
